--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+o<?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -11,7 +11,7 @@
 	<description>Generic implementations of various Machine Learning algorithms.</description>
 
 	<parent>
-		<groupId>com.davidsoergel</groupId>
+		<groupId>edu.berkeley.compbio</groupId>
 		<artifactId>basepom</artifactId>
 		<version>1.0</version>
 		<relativePath>../../basepom/pom.xml</relativePath>
