--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,10 @@
 	<name>ml</name>
 	<version>1.0-SNAPSHOT</version>
 	<url>http://dev.davidsoergel.com/ml</url>
-	<description>Generic implementations of various Machine Learning algorithms.</description>
+	<description>Generic implementations of various Machine Learning algorithms.
+		Includes an online clustering framework with a K-means implementation, and
+		a Markov Chain Monte Carlo (MCMC) framework with a Metropolis-coupled (MCMCMC) option.
+	</description>
 
 	<parent>
 		<groupId>edu.berkeley.compbio</groupId>
@@ -30,6 +33,12 @@
 		<dependency>
 			<groupId>com.davidsoergel</groupId>
 			<artifactId>dsutils</artifactId>
+			<version>1.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.davidsoergel</groupId>
+			<artifactId>utils</artifactId>
 			<version>1.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
