--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
 	<name>ml</name>
 	<version>1.0-SNAPSHOT</version>
 	<url>http://dev.davidsoergel.com/ml</url>
-	<description>Generic implementations of various Machine Learning algorithms.
-		Includes an online clustering framework with a K-means implementation, and
-		a Markov Chain Monte Carlo (MCMC) framework with a Metropolis-coupled (MCMCMC) option.
+	<description>Generic implementations of various Machine Learning algorithms. Includes an online clustering framework
+		with a K-means implementation, and a Markov Chain Monte Carlo (MCMC) framework with a Metropolis-coupled
+		(MCMCMC) option.
 	</description>
 
 	<parent>
