--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.davidsoergel</groupId>
+			<artifactId>dsutils</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<classifier>tests</classifier>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>edu.berkeley.compbio</groupId>
 			<artifactId>sequtils</artifactId>
 			<version>0.9-SNAPSHOT</version>
