--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>easymock</groupId>
+			<groupId>org.easymock</groupId>
 			<artifactId>easymock</artifactId>
 			<version>2.0</version>
 			<scope>test</scope>
