--- a/pom.xml
+++ b/pom.xml
@@ -124,13 +124,13 @@
 			<version>1.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
-		<!--	<dependency>
+		<dependency>
 			<groupId>com.davidsoergel</groupId>
 			<artifactId>dsutils</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<classifier>tests</classifier>
 			<scope>test</scope>
-		</dependency>-->
+		</dependency>
 		<dependency>
 			<groupId>edu.berkeley.compbio</groupId>
 			<artifactId>sequtils</artifactId>
