--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 	<parent>
 		<groupId>edu.berkeley.compbio</groupId>
 		<artifactId>basepom</artifactId>
-		<version>0.92-SNAPSHOT</version>
+		<version>0.92</version>
 	</parent>
 
 	<inceptionYear>2006</inceptionYear>
