--- a/pom.xml
+++ b/pom.xml
@@ -165,7 +165,7 @@
       <version>3.2</version>
       <scope>compile</scope>
     </dependency>
-    <!--	<dependency>
+    <!--	<dependency>iukeueqe
               <groupId>biojava</groupId>
               <artifactId>biojava</artifactId>
               <version>1.6</version>
