--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
       <groupId>com.davidsoergel</groupId>
       <artifactId>dsutils</artifactId>
       <version>1.0-SNAPSHOT</version>
-      <scope>compile</scope>
+      <!--<scope>compile</scope>-->
     </dependency>
     <dependency>
       <groupId>com.davidsoergel</groupId>
