--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,12 @@
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.davidsoergel</groupId>
+      <artifactId>conja</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>edu.berkeley.compbio</groupId>
       <artifactId>sequtils</artifactId>
