--- a/pom.xml
+++ b/pom.xml
@@ -121,13 +121,13 @@
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>dsutils</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.1-SNAPSHOT</version>
       <!--<scope>compile</scope>-->
     </dependency>
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>dsutils</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.1-SNAPSHOT</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -135,9 +135,14 @@
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>conja</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0</version>
     </dependency>
     <dependency>
+      <groupId>com.davidsoergel</groupId>
+      <artifactId>trees</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <!--   <dependency>
       <groupId>edu.berkeley.compbio</groupId>
       <artifactId>sequtils</artifactId>
       <version>0.9-SNAPSHOT</version>
@@ -152,7 +157,7 @@
       <artifactId>runutils</artifactId>
       <version>0.9-SNAPSHOT</version>
       <scope>compile</scope>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>stats</artifactId>
