--- a/pom.xml
+++ b/pom.xml
@@ -121,13 +121,13 @@
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>dsutils</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.01</version>
       <!--<scope>compile</scope>-->
     </dependency>
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>dsutils</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.01</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -151,13 +151,13 @@
       <groupId>edu.berkeley.compbio</groupId>
       <artifactId>phyloutils</artifactId>
       <version>0.9-SNAPSHOT</version>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>runutils</artifactId>
       <version>0.9-SNAPSHOT</version>
       <scope>compile</scope>
-    </dependency>-->
+    </dependency>
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>stats</artifactId>
