--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
   <artifactId>ml</artifactId>
 
   <name>ml</name>
-  <version>0.9</version>
+  <version>0.91-SNAPSHOT</version>
   <url>http://dev.davidsoergel.com/ml</url>
   <description>Generic implementations of various Machine Learning algorithms. Includes an online clustering framework
     with a K-means implementation, and a Markov Chain Monte Carlo (MCMC) framework with a Metropolis-coupled
@@ -61,8 +61,8 @@
 
 
   <scm>
-    <connection>scm:svn:http://svn.davidsoergel.com/repos/ml/tags/ml-0.9</connection>
-    <developerConnection>scm:svn:svn+ssh://svn.davidsoergel.com/home/svn/repos-compbio/ml/tags/ml-0.9</developerConnection>
+    <connection>scm:svn:http://svn.davidsoergel.com/repos/ml</connection>
+    <developerConnection>scm:svn:svn+ssh://svn.davidsoergel.com/home/svn/repos-compbio/ml</developerConnection>
   </scm>
 
 
