--- a/pom.xml
+++ b/pom.xml
@@ -121,13 +121,13 @@
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>dsutils</artifactId>
-      <version>1.03-SNAPSHOT</version>
+      <version>1.03</version>
       <!--<scope>compile</scope>-->
     </dependency>
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>dsutils</artifactId>
-      <version>1.03-SNAPSHOT</version>
+      <version>1.03</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -140,7 +140,7 @@
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>trees</artifactId>
-      <version>1.01-SNAPSHOT</version>
+      <version>1.01</version>
     </dependency>
     <!--   <dependency>
       <groupId>edu.berkeley.compbio</groupId>
