--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,7 @@
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>stats</artifactId>
-      <version>0.92-SNAPSHOT</version>
+      <version>0.92</version>
       <scope>compile</scope>
     </dependency>
 
