--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
     <dependency>
       <groupId>com.davidsoergel</groupId>
       <artifactId>trees</artifactId>
-      <version>1.01</version>
+      <version>1.02-SNAPSHOT</version>
     </dependency>
     <!--   <dependency>
       <groupId>edu.berkeley.compbio</groupId>
