--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
   <distributionManagement>
     <site>
       <id>website</id>
-      <url>scpexe://dev.davidsoergel.com/home/build/mavensites/ml</url>
+      <url>scpexe://jenkins@dev.davidsoergel.com/home/build/mavensites/ml</url>
     </site>
   </distributionManagement>
 
