--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 	<groupId>edu.berkeley.compbio</groupId>
 	<artifactId>ml</artifactId>
 	<name>ml</name>
-	<version>0.912-SNAPSHOT</version>
+	<version>0.92</version>
 	<url>http://dev.davidsoergel.com/ml</url>
 	<description>Generic implementations of various Machine Learning algorithms. Includes an online clustering framework
         with a K-means implementation, and a Markov Chain Monte Carlo (MCMC) framework with a Metropolis-coupled
